Log in
Skip to main content
Skip to sidebar
Linked Applications
Loading…
Dashboards
Projects
Issues
Give feedback to Atlassian
Help
Jira Core help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Qt
QTBUG-46691
QtQuick.Dialogs FileDialog does not appear at all if it is modal
Log In
Closed
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Done
Priority:
P0: Blocker
Fix Version/s:
5.5.0 RC
Affects Version/s:
5.5.0 RC
Component/s:
Quick: Dialogs
Labels:
Reported_by_support_silver
Commits:
aec2b28eea3354ec80350e25f4305c74ca9bc184
Description
Caused by
https://codereview.qt-project.org/#/c/111292/
Attachments
Gerrit Reviews
Options
Issue Only
Show All Reviews
Show Open Reviews
Show All Issues
Show Open Issues
No reviews matched the request. Check your Options in the drop-down menu of this sections header.
Activity
People
Assignee:
Shawn Rutledge
Reporter:
Shawn Rutledge
Votes:
1
Vote for this issue
Watchers:
7
Start watching this issue
Dates
Created:
16 Jun '15 12:58
Updated:
08 Jul '15 13:23
Resolved:
08 Jul '15 13:23
Gerrit Reviews
There are no open Gerrit changes
Show
There is 1 closed Gerrit change
Hide
There is 1 closed Gerrit change
OSX: show file dialog in showCocoaFilePanel, don't wait for exec()
Gerrit Review: