OSX: show file dialog in showCocoaFilePanel, don't wait for exec()

This reverts commit 21e6c7ae4745a76b676dfaa9fe17a2dd40fc0c5c
because in QtQuick.Controls, we do not call exec(): we just set the
dialog visible.  If it is a sheet, then it is already acting as a
modal dialog, basically.

Task-number: QTBUG-46691
Change-Id: I7fe89f2a2ade0d4ddcf540c9bfc4f5963a077471
Reviewed-by: Timur Pocheptsov <Timur.Pocheptsov@digia.com>