src/plugins/platforms/cocoa/qcocoafiledialoghelper.h
@@ -51,7 +51,6 @@ public:
     virtual ~QCocoaFileDialogHelper();
 
     void exec();
-    void execModalForWindow(QWindow *parent);
 
     bool defaultNameFilterDisables() const;
 
